bug image fixed

--- a/inbox.html
+++ b/inbox.html
@@ -16,10 +16,11 @@
         <button onclick="sortearCarta()" id="btnSortear">Sortear carta</button>
     
         <form id="form">
-            <h2>Escolha o seu atributo</h2>
+            <h2>Escolha o seu atributo:</h2>
             <div class="opcoes" id="opcoes"></div>
             <button type="button" id="btnJogar" onclick="jogar()" disabled="false">Jogar</button>
             <div id="resultado" class="resultado"></div> 
+            <img id="carta-imagem" > 
         </form>
     </div>
     <script src="script.js"></script>
